feat: add async email, transactional safety, and pagination support