@@ -2,8 +2,9 @@ package com.sajidtech.easytrip.service.impl;
 
 import com.sajidtech.easytrip.dto.request.BookingRequest;
 import com.sajidtech.easytrip.dto.response.BookingResponse;
+import com.sajidtech.easytrip.dto.response.PageResponse;
 import com.sajidtech.easytrip.emails.EmailService;
-import com.sajidtech.easytrip.emails.EmailTemplate;
+import com.sajidtech.easytrip.emails.CustomerEmailFormate;
 import com.sajidtech.easytrip.enums.Status;
 import com.sajidtech.easytrip.enums.TripStatus;
 import com.sajidtech.easytrip.exception.BookingNotFoundException;
@@ -19,11 +20,15 @@ import com.sajidtech.easytrip.repository.CustomerRepository;
 import com.sajidtech.easytrip.repository.DriverRepository;
 import com.sajidtech.easytrip.service.CustomerBookingService;
 import com.sajidtech.easytrip.transformer.BookingTransformer;
+import com.sajidtech.easytrip.transformer.PageTransformer;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CustomerBookingServiceImpl implements CustomerBookingService {
@@ -40,23 +45,45 @@ public class CustomerBookingServiceImpl implements CustomerBookingService {
     @Autowired
     private DriverRepository driverRepository;
 
-    public List<BookingResponse> getAllBookings(String email) {
+    public PageResponse<BookingResponse> getAllBookings(int page, int size, String email) {
+        Pageable pageable = PageRequest.of(page, size);
         Customer customer = checkValidCustomer(email);
-        return customer.getBooking().stream().map(this::getBookingResponseByBooking).toList();
+
+        Page<Booking> bookingPage =
+                bookingRepository.findBookingsByCustomer(customer, pageable);
+
+        List<BookingResponse> bookingResponseList = bookingPage.getContent().stream()
+                .map(this::getBookingResponseByBooking).toList();
+
+        return PageTransformer.pageToPageResponse(bookingPage, bookingResponseList);
     }
 
-    public List<BookingResponse> getAllCompletedBookings(String email) {
+    public PageResponse<BookingResponse> getAllCompletedBookings(int page, int size, String email) {
+        Pageable pageable = PageRequest.of(page, size);
         Customer customer = checkValidCustomer(email);
-        return customer.getBooking().stream()
+
+        Page<Booking> bookingPage =
+                bookingRepository.findBookingsByCustomer(customer, pageable);
+
+        List<BookingResponse> bookingResponseList =  bookingPage.getContent().stream()
                 .filter(booking -> booking.getTripStatus().equals(TripStatus.COMPLETED))
                 .map(this::getBookingResponseByBooking).toList();
+
+        return PageTransformer.pageToPageResponse(bookingPage, bookingResponseList);
     }
 
-    public List<BookingResponse> getAllCancelledBookings(String email) {
+    public PageResponse<BookingResponse> getAllCancelledBookings(int page, int size, String email) {
+        Pageable pageable = PageRequest.of(page, size);
         Customer customer = checkValidCustomer(email);
-        return customer.getBooking().stream()
+
+        Page<Booking> bookingPage =
+                bookingRepository.findBookingsByCustomer(customer, pageable);
+
+        List<BookingResponse> bookingResponseList = bookingPage.getContent().stream()
                 .filter(booking -> booking.getTripStatus().equals(TripStatus.CANCELLED))
-                .map(this::getBookingResponseByBooking).collect(Collectors.toList());
+                .map(this::getBookingResponseByBooking).toList();
+
+        return PageTransformer.pageToPageResponse(bookingPage, bookingResponseList);
     }
 
     public BookingResponse getProgressBookings(String email) {
@@ -67,6 +94,7 @@ public class CustomerBookingServiceImpl implements CustomerBookingService {
         return getBookingResponseByBooking(progressBooking);
     }
 
+    @Transactional
     public BookingResponse bookCab(BookingRequest bookingRequest, String email) {
         Customer customer = checkValidCustomer(email);
 
@@ -75,42 +103,44 @@ public class CustomerBookingServiceImpl implements CustomerBookingService {
             throw new RuntimeException("The customer has already been One Journey which status is IN_PROGRESS");
         }
 
-        Cab availableCab  = cabRepository.getAvailableCab().orElseThrow(()->
+        Cab availableCab  = this.cabRepository.getAvailableCab().orElseThrow(()->
                 new CabUnavailableException("Cab unavailable at this time"));
 
-        Driver driver  = driverRepository.availableCabDriver(availableCab.getCabId());
+        Driver driver  = this.driverRepository.availableCabDriver(availableCab.getCabId());
         Booking booking = BookingTransformer.bookingRequestToBooking(bookingRequest, availableCab.getPerKmRate());
-        Booking savedBooking = bookingRepository.save(booking);
+        Booking savedBooking = this.bookingRepository.save(booking);
 
         availableCab.setAvailable(false);
         driver.getBooking().add(savedBooking);
         customer.getBooking().add(savedBooking);
 
-        Customer savedCustomer = customerRepository.save(customer);
-        Driver savedDriver = driverRepository.save(driver);
+        Customer savedCustomer = this.customerRepository.save(customer);
+        Driver savedDriver = this.driverRepository.save(driver);
 
         BookingResponse bookingResponse = BookingTransformer.bookingToBookingResponse(savedBooking,availableCab,savedDriver,savedCustomer);
 
         // EmailSender to the customer who ever booked the cab
-//        EmailService.sendEmailToCustomer(EmailTemplate.getSubject(TripStatus.IN_PROGRESS), bookingResponse, TripStatus.IN_PROGRESS);
+//        EmailService.sendEmailToCustomer(CustomerEmailFormate.getSubject(TripStatus.IN_PROGRESS), bookingResponse, TripStatus.IN_PROGRESS);
 
         return bookingResponse;
     }
 
+    @Transactional
     public BookingResponse updateBookedDetails(BookingRequest bookingRequest, String email) {
         Customer customer = checkValidCustomer(email);
         Booking booking = getProgressBookingByCustomer(customer);
-        Driver driver = driverRepository.findDriverByBookingId(booking.getBookingId());
+        Driver driver = this.driverRepository.findDriverByBookingId(booking.getBookingId());
 
         booking.setPickup(bookingRequest.getPickup());
         booking.setDestination(bookingRequest.getDestination());
         booking.setTripDistanceInKm(bookingRequest.getTripDistanceInKm());
         booking.setBillAmount(bookingRequest.getTripDistanceInKm() * driver.getCab().getPerKmRate());
-        Booking savedBooking =  bookingRepository.save(booking);
+        Booking savedBooking =  this.bookingRepository.save(booking);
 
         return BookingTransformer.bookingToBookingResponse(savedBooking, driver.getCab(), driver, customer);
     }
 
+    @Transactional
     public void cancelBooking(String email) {
         Customer customer = checkValidCustomer(email);
         Booking booking = getProgressBookingByCustomer(customer);
@@ -121,7 +151,7 @@ public class CustomerBookingServiceImpl implements CustomerBookingService {
         this.driverRepository.save(driver);
         BookingResponse bookingResponse = BookingTransformer.bookingToBookingResponse(booking,driver.getCab(),driver,customer);
         //  EmailSender to the customer who ever cancel the cab
-//        EmailService.sendEmailToCustomer(EmailTemplate.getSubject(TripStatus.CANCELLED), bookingResponse, TripStatus.CANCELLED);
+//        EmailService.sendEmailToCustomer(CustomerEmailFormate.getSubject(TripStatus.CANCELLED), bookingResponse, TripStatus.CANCELLED);
     }
 
     private Booking getProgressBookingByCustomer(Customer customer) {
@@ -130,7 +160,7 @@ public class CustomerBookingServiceImpl implements CustomerBookingService {
     }
 
     private Customer checkValidCustomer(String email) {
-        Customer customer = customerRepository.findByEmail(email)
+        Customer customer = this.customerRepository.findByEmail(email)
                 .orElseThrow(()-> new CustomerNotFoundException("Customer not found"));
         if(customer.getStatus() == Status.INACTIVE){
             throw new RuntimeException("Customer is inactive. Access denied");
